--- a/Stardust/pom.xml
+++ b/Stardust/pom.xml
@@ -35,6 +35,16 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>1.1.8</version>
+                <configuration>
+                    <targetClasses>
+                        <param>kjarkko.stardust.logic.*</param>
+                        <param>kjarkko.stardust.util.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>kjarkko.stardust.logic.*</param>
+                        <param>kjarkko.stardust.util.*</param>
+                    </targetTests>
+                </configuration>        
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
